# Robotics_sim-to-sim_OnePass

./: .gitignore  LICENSE  MANIFEST.in  MANIFEST.md  PYPI_PACKAGE_NOTES.md  QUICKSTART.md  README.md  REPO_MAP.md  RESULTS_SUMMARY.md  VISUAL_INDEX.md  index.html  package-lock.json  pyproject.toml  tailwind.config.js
assets/: README.md  index-B33fZ5ol.js  index-B7rhkAra.js  index-BTg_0CoX.css  index-Bf_K5EU0.js  index-C3rTCgyf.js  index-Cv0Lcn7y.css  index-DKjUq9oa.js  index-DN9YepBT.css  index-gDzWhnLd.js
configs/: canonical_sources.json
docs/: PUBLISHING.md
onepass_release/: QUICKSTART.md  README.md  REPO_MAP.md
onepass_release/assets/: README.md
onepass_release/docs/: CANONICAL_SOURCES.md  PUBLISHING.md
onepass_release/examples/: canonical_commands.ps1
onepass_release/outputs/canonical_pass/: metrics_summary.json  source_triptych_report.md
outputs/canonical_pass/: source_stress_metrics.json
outputs/canonical_pass/plots/: traj_summary.json
public/assets/reports/: canonical-pass-report.md  source-stress-report.md
scripts/: package_release_assets.py
site/: README.md  package.json
site/src/components/: ImageCompare.tsx  MetricCard.tsx  Navbar.tsx  PipelineDiagram.tsx  SectionBlock.tsx  VideoPanel.tsx
site/src/pages/: DocsPage.tsx  ResultsPage.tsx
src/: App.tsx  index.css
src/components/: Footer.tsx  Navbar.tsx  PipelineDiagram.tsx  ResultsGallery.tsx  VideoPanel.tsx
src/data/: siteContent.ts
src/pages/: DocsPage.tsx  ResultsPage.tsx  ShowcasePage.tsx
src/sim2sim_onepass/: cli.py  paths.py
src/sim2sim_onepass/resources/: QUICKSTART.md  README.md  REPO_MAP.md  RESULTS_SUMMARY.md  VISUAL_INDEX.md  __init__.py
(+8 files in other folders)
