[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim2sim-onepass"
version = "0.1.1"
description = "A lightweight companion package for the Sim2Sim-OnePass public research release."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "ANTHONY-OLEVESTER" }
]
keywords = ["robotics", "simulation", "mujoco", "pybullet", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24",
]
license-files = ["LICENSE"]

[project.optional-dependencies]
rollout = [
  "torch>=2.0",
]
alignment = [
  "PyYAML>=6.0",
]
dev = [
  "build>=1.2.2",
  "twine>=5.1.1",
]

[project.scripts]
sim2sim-onepass = "sim2sim_onepass.cli:main"

[project.urls]
Homepage = "https://github.com/ANTHONY-OLEVESTER/Robotics_sim-to-sim_OnePass"
Repository = "https://github.com/ANTHONY-OLEVESTER/Robotics_sim-to-sim_OnePass"
Documentation = "https://github.com/ANTHONY-OLEVESTER/Robotics_sim-to-sim_OnePass"
Issues = "https://github.com/ANTHONY-OLEVESTER/Robotics_sim-to-sim_OnePass/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sim2sim_onepass = [
  "resources/*.md",
]
